--- a/xxl-rpc-core/pom.xml
+++ b/xxl-rpc-core/pom.xml
@@ -30,6 +30,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+		</dependency>
+
 
 		<!-- ********************** net (default=netty) ********************** -->
 
